Menu causes horizontal scroll fix (#5071)
Box sizing "border-box" added to menu to exclude
margin/padding to be calculated onto the width.

Browser Support:
Chrome (any), Opera 8.5+, Firefox (any), Safari 3, IE8+

--- a/app/Resources/public/css/_defaults.scss
+++ b/app/Resources/public/css/_defaults.scss
@@ -99,6 +99,14 @@ $menuBgGrey: rgba(148, 193, 28, 1);
     box-shadow: $left $top $radius $size $color;
 }
 
+@mixin box-sizing($type){
+    -webkit-box-sizing: $type;
+    -moz-box-sizing: $type;
+    -ms-box-sizing: $type;
+    -o-box-sizing: $type;
+    box-sizing: $type;
+}
+
 @mixin box-shadow-disabled(){
     -moz-box-shadow: none;
     -webkit-box-shadow: none;
