--- a/app/Resources/public/css/menu.scss
+++ b/app/Resources/public/css/menu.scss
@@ -7,12 +7,13 @@
 
 #menu {
     list-style:none;
-    width:99%;
+    width:100%;
     height:40px;
     background: $menuBgGrey;
     float: left;
     padding: 0 10px 0 10px;
     margin: -3px 3px 0 0;
+    @include box-sizing(border-box);
     
     &.clone {
         position: fixed;
